--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -25,5 +25,16 @@
   "myAnswers": "My answers",
   "resultsDesc": "The top 300 participants who scored the most points will move on to the second stage. If you are one of them, you can see the message 'You have moved on to the second stage!' on this page soon. Also, the message will be sent to your phone as an SMS.",
   "totalScore": "Your total score",
-  "score": "point"
+  "score": "point",
+  "login": "Log in",
+  "sign in": "Sign in",
+  "phone number": "Phone number",
+  "password": "Password",
+  "remember": "Remember",
+  "forget password": "Forgot your password?",
+  "full name": "Full name",
+  "email": "E-mail",
+  "selectTypeOfPassport": "Select an identity document",
+  "certificate": "certificate",
+  "enter details of passport": "Enter details of passport"
 }
