--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -25,5 +25,17 @@
   "myAnswers": "Мои ответы",
   "resultsDesc": "Топ-300 участников, набравших наибольшее количество баллов, переходят на второй этап. Если вы из них, вы можете увидеть сообщение 'Вы перешли на второй этап!' на этой странице в ближайшее время. Кроме того, сообщение будет отправлено на ваш телефон в виде SMS.",
   "totalScore": "Ваш общий балл",
-  "score": "балл"
+  "score": "балл",
+  "login": "вход",
+  "sign in": "Зарегистрироваться",
+  "phone number": "Номер телефона",
+  "password": "Пароль",
+  "remember": "Запоминать",
+  "forget password": "Забыли пароль?",
+  "full name": "Ф.И.О.",
+  "email": "электронная почта",
+  "selectTypeOfPassport": "Выберите документ, удостоверяющий личность",
+  "certificate": "Cвидетельство о рождении",
+  "enter details of passport": "Введите данные документа",
+  "address": "Адрес"
 }
