--- a/src/translations/uz.json
+++ b/src/translations/uz.json
@@ -26,6 +26,16 @@
   "resultsDesc": "300 ta eng yuqori ball to'plagan ishtirokchi ikkinchi bosqichga o'tadi. Agar siz ulardan biri bo'lsangiz, yaqinda ushbu sahifada 'Siz ikkinchi bosqichga o'tdingiz!' degan xabarni ko'rishingiz mumkin. Xabar shuningdek, sizning telefoningizga SMS tarzida yuboriladi.",
   "totalScore": "Sizning to'plagan balingiz",
   "score": "ball",
-  "next": "Keyingisi",
-  "previous": "Oldingisi"
+  "login": "Kirish",
+  "sign in": "Ro'yxatdan o'tish",
+  "phone number": "Telefon raqam",
+  "password": "Parol",
+  "remember": "Eslab qolsin",
+  "forget password": "Parolni unitdingizmi?",
+  "full name": "F.I.O.",
+  "email": "Elektron pochta",
+  "selectTypeOfPassport": "Shaxsni tasdiqlovchi hujjatni tanlang",
+  "certificate": "Guvohnoma",
+  "enter details of passport": "Hujjat detallarini kiriting",
+  "address": "Manzil"
 }
