--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -36,5 +36,6 @@
   "email": "E-mail",
   "selectTypeOfPassport": "Select an identity document",
   "certificate": "certificate",
-  "enter details of passport": "Enter details of passport"
+  "enter details of passport": "Enter details of passport",
+  "address": "Address"
 }
