--- a/src/translations/uz.json
+++ b/src/translations/uz.json
@@ -32,7 +32,7 @@
   "password": "Parol",
   "remember": "Eslab qolsin",
   "forget password": "Parolni unitdingizmi?",
-  "full name": "F.I.O.",
+  "full name": "F.I.Sh.",
   "email": "Elektron pochta",
   "selectTypeOfPassport": "Shaxsni tasdiqlovchi hujjatni tanlang",
   "certificate": "Guvohnoma",
