--- a/src/translations/uz.json
+++ b/src/translations/uz.json
@@ -8,12 +8,12 @@
   "questions": "Savollar",
   "homePage": "Bosh sahifa",
   "reminder": "Eslatma",
-  "first_reminder": "Olimpiada uchun 30 ta savol berilgan bo‘lib, birinchi 10 ta savol 2,1 ball, keyingi 10 ta savol 3,1 ball, so‘nggi 10 ta savol esa 5,1 ball bilan baholanadi.",
-  "second_reminder": "Maksimal ball 103 ball.",
+  "first_reminder": "Olimpiada ikki bosqichda o'tkaziladi. Birinchi bosqich onlayn shaklda topshiriladi.",
+  "second_reminder": "Unda test savollariga to'g'ri javob berib eng yuqori ball to'plagan 300 nafar qatnashchilar ikkinchi bosqichga yo'llanmani qo'lga kiritadilar.",
   "third_reminder": "Olimpiada davomiyligi – 1 soat.",
-  "fourth_reminder": "Belgilangan vaqt tugaganidan so‘ng, ishtirokchi necha savolga javob bergan bo‘lsa, o‘sha savollar uchun olingan ballar hisoblanadi, javob berilmagan savollar baholanmaydi.",
-  "fifth_reminder": "Eng yuqori ball to‘plagan 300 nafar ishtirokchi 2-bosqichga o‘tish imkoniyatini qo‘lga kiritadi.",
-  "sixth_reminder": "Natijalarni shaxsiy kabinetda ko‘rish mumkin bo‘ladi.",
+  "fourth_reminder": "Birinchi bosqich: 'iqmath.uz' saytida test shaklida o'tkaziladi, savollar soni jami 30 tani tashkil etadi. Unda: birinchi o'ntaligi 2.1 balldan, ikkinchi o'ntaligi 3.1 balldan va so'nggi o'ntaligi 5.1 balldan, jami maksimal to’plashingiz mumkin bo‘lgan ball 103 ballni tashkil etadi. Testlar ishlanishiga jami bir soat beriladi. Belgilangan vaqt tugagach tizim avtomatik tarzda testni to'xtatadi va javob berilgan savollargagina ballar hisoblanadi, javobsiz qolgan savollarga '0' ball baholanadi. Natijalaringizni test so'ngida ko'rishingiz mumkin bo'ladi.",
+  "fifth_reminder": "Ikkinchi bosqich haqida va boshqa qiziqtirgan savollaringizga bu havola orqali 'https://iqmath.uz/info/about-olympic' javob olishingiz mumkin.",
+  "sixth_reminder": "O'zingiz haqingizda saytga kiritgan ma'lumotlaringiz passport(ID) yoki tug'ilganlik haqidagi guvohnomangiz ma'lumotlari bilan to'g'ri kelishi kerak, aks holda testdan chetlashtirilasiz va ikkinchi bosqichga qo'yilmaysiz!",
   "leadTime": "Bajarish vaqti",
   "startDate": "Boshlanish sanasi",
   "endDate": "Tugash sanasi",
