--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -8,12 +8,12 @@
   "questions": "Вопросы",
   "homePage": "Главная страница",
   "reminder": "Напоминание",
-  "first_reminder": "Для олимпиады предоставлено 30 вопросов, первые 10 вопросов оцениваются в 2,1 балла, следующие 10 вопросов в 3,1 балла, последние 10 вопросов оцениваются в 5,1 балла.",
-  "second_reminder": "Максимальный балл 103 балла.",
+  "first_reminder": "Олимпиада проводится в два этапа. Первый этап проводится в онлайн-формате. 300 участников, набравших наибольшее количество баллов за правильные ответы на тестовые вопросы, получают право на участие во втором этапе.",
+  "second_reminder": "Первый этап: тесты проводятся на сайте 'iqmath.uz' и включают 30 вопросов. Баллы распределяются следующим образом: первые 10 вопросов оцениваются в 2,1 балла за каждый; следующие 10 вопросов — в 3,1 балла за каждый; последние 10 вопросов — в 5,1 балла за каждый.",
   "third_reminder": "Продолжительность олимпиады - 1 час.",
-  "fourth_reminder": "После окончания отведенного времени, за каждый вопрос, на который участник ответил, начисляются баллы, неотвеченные вопросы не оцениваются.",
-  "fifth_reminder": "Топ-300 участников, набравших наибольшее количество баллов, получат возможность перейти на 2-й этап.",
-  "sixth_reminder": "Результаты можно увидеть в личном кабинете.",
+  "fourth_reminder": "Максимально возможный результат составляет 103 балла. На выполнение тестов отводится 1 час. После завершения указанного времени система автоматически завершит тест, и баллы будут начислены только за отвеченные вопросы. Вопросы без ответа оцениваются в 0 баллов. Вы сможете увидеть свои результаты сразу после завершения теста.",
+  "fifth_reminder": "Информацию о втором этапе и ответы на другие интересующие вас вопросы можно найти по этой ссылке: 'https://iqmath.uz/info/about-olympic'",
+  "sixth_reminder": "Обратите внимание: информация, введённая вами на сайте, должна совпадать с данными вашего паспорта (ID) или свидетельства о рождении. В противном случае вы будете отстранены от тестирования и не сможете принять участие во втором этапе!",
   "leadTime": "Время выполнения",
   "startDate": "Дата начала",
   "endDate": "Дата окончания",
