--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -37,5 +37,26 @@
   "selectTypeOfPassport": "Выберите документ, удостоверяющий личность",
   "certificate": "Cвидетельство о рождении",
   "enter details of passport": "Введите данные документа",
-  "address": "Адрес"
+  "address": "Адрес",
+  "aboutusTitle": "Инновационная электронная платформа",
+  "aboutusTitle1": "Подробнее о «IQ math».",
+  "aboutusTitle2": "Что мы предлагаем?",
+  "aboutusTitle3": "Особенности платформы «IQ math»",
+  "aboutusTitle4": "Результаты обучения",
+  "aboutusContent1": "IQmath — это инновационная электронная платформа, специально разработанная для эффективного обучения математике. Она сочетает в себе передовые методы преподавания и современные технологические решения, создавая уникальное образовательное пространство для пользователей разных возрастных групп и уровней подготовки. Платформа предназначена для тех, кто хочет углубить свои знания в области математики или просто улучшить свои навыки в решении задач.",
+  "aboutusContent2": "IQmath предлагает разнообразные тесты и упражнения, которые дают возможность проверить свои знания и подготовиться к экзаменам или контрольным работам. Встроенные системы оценки позволяют следить за прогрессом, а адаптивные задания подстраиваются под уровень знаний учащегося, что помогает им двигаться вперед, не теряя мотивации.",
+  "aboutusContent3": "IQmath предлагает разнообразные курсы по таким направлениям, как алгебра, геометрия, статистика, математический анализ и другие важные области математики. Каждый курс включает в себя не только теоретические материалы, но и практические задания, которые помогают закрепить изученное. Платформа предлагает гибкую систему обучения, что позволяет учащимся самостоятельно выбирать темп и глубину изучения.",
+  "aboutusContent4": "Одной из особенностей IQmath является наличие видеоматериалов. На платформе представлены подробные видеоуроки, которые шаг за шагом объясняют теоретические концепции и принципы. Это помогает ученикам легко осваивать даже сложные темы. Также доступны видеообъяснения решений конкретных примеров из учебников, что позволяет пользователю не только понять, как решать задачи, но и усвоить логику их решения.",
+  "aboutusContent5": "В результате обучения на платформе IQmath не только значительно повышается успеваемость, но и развиваются важнейшие навыки логического и аналитического мышления, которые пригодятся в решении не только математических задач, но и в других сферах жизни.",
+  "aboutOlympics": "Olimpiada haqida",
+  "aboutOlympicsContent2": "Студенты высших учебных заведений к участию не допускаются!",
+  "aboutOlympicsContent3": "В олимпиаде могут участвовать выпускники всех государственных и негосударственных школ, академических лицеев и профессиональных колледжей Узбекистана, а также молодежь в возрасте от 18 до 20 лет. Студенты вузов исключаются из участия.",
+  "aboutOlympicsContent4": "Желающие принять участие в тестировании должны зарегистрироваться на сайте 'iq-math.uz' в период с 1 февраля по 20 марта 2025 года. После окончания указанного срока регистрация на сайте будет закрыта, и незарегистрированные учащиеся не смогут участвовать в тестировании.",
+  "aboutOlympicsContent5": "Личные данные, указанные при регистрации (Ф.И.О.), должны совпадать с данными паспорта (ID) или свидетельства о рождении. В противном случае, даже если участник рекомендован для второго этапа на основе набранных баллов, он не сможет принять в нем участие.",
+  "aboutOlympicsContent6": "Уведомление о рекомендации для второго этапа можно будет получить до 4 апреля 2025 года на пользовательской странице сайта 'iq-math.uz' и в виде SMS.",
+  "aboutOlympicsContent7": "Участники второго этапа должны прийти с документами, удостоверяющими личность (паспорт (ID) или свидетельство о рождении). Участники без документов к тестированию не допускаются.",
+  "aboutOlympicsContent8": "Участники второго этапа оплачивают свои расходы на проезд, проживание и питание самостоятельно (организаторы не покрывают личные расходы участников).",
+  "aboutOlympicsContent9": "Призы предоставляются участникам, успешно прошедшим все этапы.",
+
+  "aboutOlympicsContent1": "Университет цифровой экономики и агротехнологий (далее 'UDEA', www.udea.uz) организует олимпиаду по математике для всех выпускников государственных и негосударственных общеобразовательных школ, академических лицеев и профессиональных колледжей Республики Узбекистан, а также для молодежи в возрасте до 20 лет."
 }
