--- a/src/translations/uz.json
+++ b/src/translations/uz.json
@@ -37,5 +37,26 @@
   "selectTypeOfPassport": "Shaxsni tasdiqlovchi hujjatni tanlang",
   "certificate": "Guvohnoma",
   "enter details of passport": "Hujjat detallarini kiriting",
-  "address": "Manzil"
+  "address": "Manzil",
+  "aboutus": "Biz haqimizda",
+  "aboutusTitle": "Innovatsion elektron platforma",
+  "aboutusTitle1": "IQ math haqida ko'proq",
+  "aboutusTitle2": "Nimalarni taklif qilamiz?",
+  "aboutusTitle3": "IQ math platformasining xususiyatlari",
+  "aboutusTitle4": "O'qitish natijalari",
+  "aboutusContent1": "IQmath - bu matematikani samarali o‘rganish uchun maxsus ishlab chiqilgan innovatsion elektron platforma. Bu platforma zamonaviy texnologik yechimlar va ilg‘or o‘qitish usullarini o‘zida mujassam etib, turli yosh guruhlari va tayyorgarlik darajalariga moslashtirilgan noyob ta’lim makonini yaratadi. Platforma matematik bilimlarini chuqurlashtirishni yoki masalalar yechish bo‘yicha ko‘nikmalarini yaxshilashni istaganlar uchun mo‘ljallangan.",
+  "aboutusContent2": "IQmath turli testlar va mashqlarni taqdim etadi, bu esa foydalanuvchilarga o‘z bilimlarini sinab ko‘rish va imtihonlarga yoki nazorat ishlariga tayyorlanish imkoniyatini beradi. O‘rnatilgan baholash tizimlari o‘sishni kuzatishga yordam beradi, moslashuvchan topshiriqlar esa o‘quvchining bilim darajasiga moslashadi va motivatsiyani yo‘qotmasdan oldinga siljishga yordam beradi.",
+  "aboutusContent3": "IQmath algebra, geometriya, statistika, matematik analiz va boshqa muhim yo‘nalishlarda turli kurslarni taklif etadi. Har bir kurs nafaqat nazariy materiallarni, balki o‘rganilgan mavzularni mustahkamlash uchun amaliy topshiriqlarni ham o‘z ichiga oladi. Platforma moslashuvchan o‘qitish tizimini taklif etadi, bu esa o‘quvchilarga o‘z sur’ati va o‘rganish darajasini tanlash imkoniyatini beradi.",
+  "aboutusContent4": "Asosiy xususiyatlaridan biri bu video materiallarning mavjudligi. Platformada nazariy konsepsiyalar va tamoyillarni bosqichma-bosqich tushuntirib beruvchi batafsil video darsliklar taqdim etilgan. Bu hatto murakkab mavzularni ham o‘zlashtirishni osonlashtiradi. Shuningdek, darsliklardagi aniq misollarni yechish bo‘yicha video tushuntirishlar ham mavjud bo‘lib, foydalanuvchilarga masalalarni qanday yechishni o‘rganish va yechim mantiqini tushunish imkonini beradi.",
+  "aboutusContent5": "IQmath platformasida o‘qitish natijasida nafaqat akademik natijalar sezilarli darajada yaxshilanadi, balki mantiqiy va analitik fikrlash kabi muhim ko‘nikmalar ham rivojlanadi. Ushbu ko‘nikmalar nafaqat matematik masalalarni, balki hayotning boshqa sohalaridagi muammolarni hal qilishda ham asqotadi.",
+  "aboutOlympics": "Olimpiada haqida",
+  "aboutOlympicsContent2": "Oliy ta'lim muassasalari talabalari ishtirok etishi mumkin emas!",
+  "aboutOlympicsContent3": "Olimpiadada O‘zbekiston Respublikasidagi barcha davlat va nodavlat maktablari, akademik litseylar va kasb-hunar maktablari bitiruvchilari, shuningdek, 18 yoshdan 20 yoshgacha bo‘lgan yoshlar ishtirok etishi mumkin. Oliy ta'lim muassasalari talabalari bundan mustasno.",
+  "aboutOlympicsContent4": "Testda ishtirok etish istagidagilar 'iq-math.uz' saytida 2025 yil 1-fevraldan 20-mart sanasigacha ro'yxatdan o'tgan bo'lishlari talab etiladi. Shu muddat tugagandan so'ng saytdan ro'yxatdan o'tish yopiladi. Ro'yxatdan o'tishga ulgurmagan o'quvchilar test jarayonlarida ishtirok eta olmaydilar.",
+  "aboutOlympicsContent5": "Saytdan ro'yxatdan o'tish jarayonida kiritilgan shaxsiy ma'lumotlar (F.I.Sh) passport (ID) yoki tug'ilganlik haqidagi guvohnoma bilan bir hil bo'lishi shart. Aks holda ikkinchi bosqishga to‘plagan ballari bo‘yicha tavsiya etilgan bo‘lsada qatnashish imkoniyatiga ega bo‘lmaydi.",
+  "aboutOlympicsContent6": "Ikkinchi bosqichga tavsiya etilganlik xabarini 2025 yilning 4-apreligacha bo’lgan vaqtda 'iq-math.uz' foydalanuvchi sahifasida va sms shaklida olishingiz mumkin.",
+  "aboutOlympicsContent7": "Ikkinchi bosqichga ishtirokchilar o'z shaxsini tasdiqlovchi hujjatlari (Passport (ID) yoki tug'ilganlik haqidagi guvohnoma) bilan kelishlari talab etiladi. Hujjatsiz ishtirokchilar test jarayonlariga qo'yilmaydilar.",
+  "aboutOlympicsContent8": "Ikkinchi bosqichda ishtirok etuvchilar sayohat, yashash va ovqatlanish xarajatlarini o‘zlari qoplaydilar (Tashkilotchilar ishtirokchilarning shaxsiy xarajatlarini o'z bo'yniga olmaydi).",
+  "aboutOlympicsContent9": "Sovrinlar barcha bosqichlardan muvofaqqiyatli o'tgan ishtirokchilarga taqdim etiladi.",
+  "aboutOlympicsContent1": "Raqamli iqtisodiyot va agrotexnologiyalar universiteti (Keyingi o'rinlarda 'UDEA' (www.udea.uz) deb yuritiladi) O‘zbekiston Respublikasidagi barcha davlat va nodavlat o‘rta va maxsus ta’lim muassasalari, akademik litseylar va kasb-hunar maktablari bitiruvchilari hamda 20 yoshgacha bo‘lgan yoshlar uchun matematika fani bo‘yicha olimpiada tashkil qiladi."
 }
