--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -49,6 +49,18 @@
   "aboutusContent4": "Одной из особенностей IQmath является наличие видеоматериалов. На платформе представлены подробные видеоуроки, которые шаг за шагом объясняют теоретические концепции и принципы. Это помогает ученикам легко осваивать даже сложные темы. Также доступны видеообъяснения решений конкретных примеров из учебников, что позволяет пользователю не только понять, как решать задачи, но и усвоить логику их решения.",
   "aboutusContent5": "В результате обучения на платформе IQmath не только значительно повышается успеваемость, но и развиваются важнейшие навыки логического и аналитического мышления, которые пригодятся в решении не только математических задач, но и в других сферах жизни.",
   "aboutOlympics": "Olimpiada haqida",
+  "olympicsTitle": "Олимпиада по математике IQMath-2025",
+  "aboutOlympicsTitle": "Условия участия в олимпиаде",
+  "aboutOlympicsTitle1": "Этапы олимпиады",
+  "aboutOlympicsTitle2": "Призы",
+  "winner1": "электромобиль BYD E2.",
+  "winner2": "13-дюймовый Apple iPad Pro M4.",
+  "winner3": "Apple iPhone 16 Pro Max.",
+  "winnerDesc": "Примите участие в олимпиаде и выиграйте один из ценных призов. Желаем вам удачи и надеемся увидеть вас в числе победителей!",
+  "aboutOlympics10": "Первый этап Проводится онлайн на сайте 'iq-math.uz' с 21 по 28 марта 2025 года. Каждому участнику будет предложено 30 тестовых вопросов, на выполнение которых дается 60 минут. 300 участников, набравших наибольшее количество баллов, проходят во второй этап.",
+  "aboutOlympics11": "Второй этап проводится в офлайн-формате в университете UDEA. Участникам будет предложено 5 задач, на решение которых отводится 90 минут. За каждую правильно решенную задачу начисляется 20 баллов, всего можно набрать до 100 баллов. В случае равенства баллов участникам будут даны дополнительные 3 вопроса.Победителем станет участник, набравший наибольшее количество баллов. Победители будут объявлены в течение 3 дней после завершения тестирования. Список победителей будет опубликован на сайте 'iqmath.uz' и в социальных сетях UDEA.",
+  "aboutOlympics12": "Олимпиада и призы организованы при поддержке университета UDEA (www.udea.uz) и AGROBANK (agrobank.uz). 10 участников, набравших наибольшее количество баллов на втором этапе (при наличии сертификата IELTS), будут рекомендованы для участия в программах Coventry University при UDEA. Участники, полностью оплатившие контракт и зачисленные на программы, получат возможность участвовать в летней школе 'Summer School' в городе Ковентри.",
+  "aboutOlympics13": "Участники второго этапа, поступившие в университет UDEA и оплатившие 100% стоимости контракта, будут награждены ваучером на 3 миллиона сумов.",
   "aboutOlympicsContent2": "Студенты высших учебных заведений к участию не допускаются!",
   "aboutOlympicsContent3": "В олимпиаде могут участвовать выпускники всех государственных и негосударственных школ, академических лицеев и профессиональных колледжей Узбекистана, а также молодежь в возрасте от 18 до 20 лет. Студенты вузов исключаются из участия.",
   "aboutOlympicsContent4": "Желающие принять участие в тестировании должны зарегистрироваться на сайте 'iq-math.uz' в период с 1 февраля по 20 марта 2025 года. После окончания указанного срока регистрация на сайте будет закрыта, и незарегистрированные учащиеся не смогут участвовать в тестировании.",
@@ -57,6 +69,18 @@
   "aboutOlympicsContent7": "Участники второго этапа должны прийти с документами, удостоверяющими личность (паспорт (ID) или свидетельство о рождении). Участники без документов к тестированию не допускаются.",
   "aboutOlympicsContent8": "Участники второго этапа оплачивают свои расходы на проезд, проживание и питание самостоятельно (организаторы не покрывают личные расходы участников).",
   "aboutOlympicsContent9": "Призы предоставляются участникам, успешно прошедшим все этапы.",
-
-  "aboutOlympicsContent1": "Университет цифровой экономики и агротехнологий (далее 'UDEA', www.udea.uz) организует олимпиаду по математике для всех выпускников государственных и негосударственных общеобразовательных школ, академических лицеев и профессиональных колледжей Республики Узбекистан, а также для молодежи в возрасте до 20 лет."
+  "aboutOlympicsContent1": "Университет цифровой экономики и агротехнологий (далее 'UDEA', www.udea.uz) организует олимпиаду по математике для всех выпускников государственных и негосударственных общеобразовательных школ, академических лицеев и профессиональных колледжей Республики Узбекистан, а также для молодежи в возрасте до 20 лет.",
+  "faqTitle": "Savollarga javoblar",
+  "question1": "Где я могу получить информацию об Олимпийских играх?",
+  "question2": "Что такое IQMATH?",
+  "question3": "Где я могу получить ответы на интересующие меня вопросы об IQmath?",
+  "question4": "Кто может зарегистрироваться на платформе IQmath?",
+  "question5": "Предусмотрены ли бонусы для отличившихся пользователей на платформе IQmath?",
+  "question6": "Как связаться с организаторами IQmath?",
+  "answer1": "Об олимпиаде.",
+  "answer2": "IQmath - это инновационная электронная платформа, специально разработанная для эффективного изучения математики, которая помогает лучше усваивать школьные учебники и получать более высокие баллы на вступительных экзаменах в высшие учебные заведения.",
+  "answer3": "Вы можете позвонить по номеру +998 (78) 888 08 00 и получить ответы на любые вопросы.",
+  "answer4": "Для использования платформы IQmath возрастных ограничений нет. Любой пользователь может воспользоваться сайтом. Платформа является платная.",
+  "answer5": "Пользователи, успешно и своевременно выполняющие задания на платформе, получают бонусы. Эти баллы в скором времени можно будет обменять на ценные подарки (работа в этом направлении уже началась).",
+  "answer6": "Свяжитесь с нами по телефону +998 (78) 888 08 00, чтобы получить ответы на все интересующие вас вопросы."
 }
