--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -48,7 +48,9 @@
   "aboutusContent3": "IQmath предлагает разнообразные курсы по таким направлениям, как алгебра, геометрия, статистика, математический анализ и другие важные области математики. Каждый курс включает в себя не только теоретические материалы, но и практические задания, которые помогают закрепить изученное. Платформа предлагает гибкую систему обучения, что позволяет учащимся самостоятельно выбирать темп и глубину изучения.",
   "aboutusContent4": "Одной из особенностей IQmath является наличие видеоматериалов. На платформе представлены подробные видеоуроки, которые шаг за шагом объясняют теоретические концепции и принципы. Это помогает ученикам легко осваивать даже сложные темы. Также доступны видеообъяснения решений конкретных примеров из учебников, что позволяет пользователю не только понять, как решать задачи, но и усвоить логику их решения.",
   "aboutusContent5": "В результате обучения на платформе IQmath не только значительно повышается успеваемость, но и развиваются важнейшие навыки логического и аналитического мышления, которые пригодятся в решении не только математических задач, но и в других сферах жизни.",
-  "aboutOlympics": "Olimpiada haqida",
+  "aboutOlympics": "Об олимпиаде",
+  "faq": "Вопросы и ответы",
+  "aboutus": "О нас",
   "olympicsTitle": "Олимпиада по математике IQMath-2025",
   "aboutOlympicsTitle": "Условия участия в олимпиаде",
   "aboutOlympicsTitle1": "Этапы олимпиады",
@@ -82,5 +84,13 @@
   "answer3": "Вы можете позвонить по номеру +998 (78) 888 08 00 и получить ответы на любые вопросы.",
   "answer4": "Для использования платформы IQmath возрастных ограничений нет. Любой пользователь может воспользоваться сайтом. Платформа является платная.",
   "answer5": "Пользователи, успешно и своевременно выполняющие задания на платформе, получают бонусы. Эти баллы в скором времени можно будет обменять на ценные подарки (работа в этом направлении уже началась).",
-  "answer6": "Свяжитесь с нами по телефону +998 (78) 888 08 00, чтобы получить ответы на все интересующие вас вопросы."
+  "answer6": "Свяжитесь с нами по телефону +998 (78) 888 08 00, чтобы получить ответы на все интересующие вас вопросы.",
+  "enter": "Вход в систему",
+  "left": "Выйти из системы",
+  "resetPassword": "Восстановление пароля",
+  "submit": "Подтверждение",
+  "enterSMSCode": "Введите СМС-код",
+  "newPassword": "Введите новый пароль",
+  "finish": "Заканчивать",
+  "resendSMSCode": "Повторно отправить SMS-код"
 }
