--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -33,9 +33,21 @@
   "remember": "Запоминать",
   "forget password": "Забыли пароль?",
   "full name": "Ф.И.О.",
-  "email": "электронная почта",
+  "email": "Электронная почта",
   "selectTypeOfPassport": "Выберите документ, удостоверяющий личность",
   "certificate": "Cвидетельство о рождении",
+
+  "passport": "Паспорт",
+
+  "chooseRegion": "Выберите регион",
+  "chooseDistrict": "Выберите район",
+  "chooseEducation": "Выбрать учебное заведение",
+  "noRegion": "Район недоступен",
+  "litsey": "Лицей",
+  "school": "Школа",
+  "finishedEducation": "Окончил",
+  "class": "класс",
+  "course": "курс",
   "enter details of passport": "Введите данные документа",
   "address": "Адрес",
   "aboutusTitle": "Инновационная электронная платформа",
