--- a/src/translations/uz.json
+++ b/src/translations/uz.json
@@ -36,6 +36,16 @@
   "email": "Elektron pochta",
   "selectTypeOfPassport": "Shaxsni tasdiqlovchi hujjatni tanlang",
   "certificate": "Guvohnoma",
+  "passport": "Pasport",
+  "chooseRegion": "Viloyatni tanlang",
+  "chooseDistrict": "Hududni tanlang",
+  "chooseEducation": "Ta'lim dargohini tanlang",
+  "noRegion": "Hudud mavjud emas",
+  "litsey": "Litsey",
+  "school": "Maktab",
+  "finishedEducation": "Bitirgan",
+  "class": "sinf",
+  "course": "kurs",
   "enter details of passport": "Hujjat detallarini kiriting",
   "address": "Manzil",
 
