--- a/src/translations/uz.json
+++ b/src/translations/uz.json
@@ -48,6 +48,7 @@
   "course": "kurs",
   "enter details of passport": "Hujjat detallarini kiriting",
   "address": "Manzil",
+  "testStart": "Testni boshlash",
 
   "aboutusTitle": "Innovatsion elektron platforma",
   "aboutusTitle1": "IQ math haqida ko'proq",
