--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -36,20 +36,22 @@
   "email": "Электронная почта",
   "selectTypeOfPassport": "Выберите документ, удостоверяющий личность",
   "certificate": "Cвидетельство о рождении",
-
+  "testStart": "Начать тест",
   "passport": "Паспорт",
-
+  "birthday": "Ваша дата рождения",
   "chooseRegion": "Выберите регион",
   "chooseDistrict": "Выберите район",
   "chooseEducation": "Выбрать учебное заведение",
   "noRegion": "Район недоступен",
   "litsey": "Лицей",
   "school": "Школа",
+  "chooseTypeOfClass": "Курс/Класс/Выпускник",
   "finishedEducation": "Окончил",
   "class": "класс",
   "course": "курс",
   "enter details of passport": "Введите данные документа",
   "address": "Адрес",
+  "oferta": "Я соглашаюсь с пользовательским соглашением и политикой конфиденциальности",
   "aboutusTitle": "Инновационная электронная платформа",
   "aboutusTitle1": "Подробнее о «IQ math».",
   "aboutusTitle2": "Что мы предлагаем?",
