--- a/src/translations/uz.json
+++ b/src/translations/uz.json
@@ -49,7 +49,9 @@
   "enter details of passport": "Hujjat detallarini kiriting",
   "address": "Manzil",
   "testStart": "Testni boshlash",
-
+  "birthday": "Tug'ilgan sanangiz",
+  "chooseTypeOfClass": "Kurs/Sinf/Bitirgan",
+  "oferta": "Shu bilan men foydalanuvchi shartnomasi va maxfiylik siyosatiga rozilik bildiraman",
   "aboutusTitle": "Innovatsion elektron platforma",
   "aboutusTitle1": "IQ math haqida ko'proq",
   "aboutusTitle2": "Nimalarni taklif qilamiz?",
