--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -52,6 +52,17 @@
   "enter details of passport": "Введите данные документа",
   "address": "Адрес",
   "oferta": "Я соглашаюсь с пользовательским соглашением и политикой конфиденциальности",
+  "userProfile": "Профиль пользователя",
+  "myPage": "Моя страница",
+  "details": "Подробности",
+  "region": "Регион",
+  "district": "Район/Город",
+  "settings": "Настройки",
+  "exitWeb": "Выйти из веб-страницы",
+  "exitWebDesc": "Вы уверены, что хотите покинуть страницу?",
+  "educationalInstitution": "Образовательное учреждение:",
+  "yes": "Да",
+  "no": "Нет",
   "aboutusTitle": "Инновационная электронная платформа",
   "aboutusTitle1": "Подробнее о «IQ math».",
   "aboutusTitle2": "Что мы предлагаем?",
