--- a/src/translations/uz.json
+++ b/src/translations/uz.json
@@ -52,6 +52,17 @@
   "birthday": "Tug'ilgan sanangiz",
   "chooseTypeOfClass": "Kurs/Sinf/Bitirgan",
   "oferta": "Shu bilan men foydalanuvchi shartnomasi va maxfiylik siyosatiga rozilik bildiraman",
+  "userProfile": "Foydalanuvchi profili",
+  "myPage": "Mening sahifam",
+  "details": "Tafsilotlar",
+  "region": "Viloyati",
+  "district": "Tuman/Shahar",
+  "settings": "Sozlamalar",
+  "exitWeb": "Web sahifadan chiqish",
+  "exitWebDesc": "Haqiqatan ham sahifani tark etmoqchimisiz?",
+  "yes": "Ha",
+  "no": "Yo'q",
+  "educationalInstitution": "Ta'lim dargohi:",
   "aboutusTitle": "Innovatsion elektron platforma",
   "aboutusTitle1": "IQ math haqida ko'proq",
   "aboutusTitle2": "Nimalarni taklif qilamiz?",
