--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -76,6 +76,10 @@
   "aboutOlympics": "Об олимпиаде",
   "faq": "Вопросы и ответы",
   "aboutus": "О нас",
+  "yourLogin": "Ваш логин",
+  "yourPassword": "Ваш пароль",
+  "got it": "Понятно",
+  "WantchangePassword": "Если вы хотите изменить свой пароль, вы можете сделать это на моей странице.",
   "olympicsTitle": "Олимпиада по математике IQMath-2025",
   "aboutOlympicsTitle": "Условия участия в олимпиаде",
   "aboutOlympicsTitle1": "Этапы олимпиады",
