--- a/src/translations/uz.json
+++ b/src/translations/uz.json
@@ -62,6 +62,14 @@
   "exitWebDesc": "Haqiqatan ham sahifani tark etmoqchimisiz?",
   "yes": "Ha",
   "no": "Yo'q",
+  "successRegister": "Muvaqqiyatli ro'yhatdan o'tdingiz",
+  "userLoginandPassword": "Sizning login parolingiz",
+  "copy": "Nusxa olish",
+  "yourLogin": "Login",
+  "yourPassword": "Parolingiz",
+  "got it": "Tushunarli",
+  "copied": "Nusxa olindi!",
+  "WantchangePassword": "Login va parolni o'zgartirmoqchi bo'lsangiz, bu jarayonni mening sahifamda bajarasiz",
   "educationalInstitution": "Ta'lim dargohi:",
   "aboutusTitle": "Innovatsion elektron platforma",
   "aboutusTitle1": "IQ math haqida ko'proq",
