--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -51,7 +51,7 @@
   "course": "курс",
   "enter details of passport": "Введите данные документа",
   "address": "Адрес",
-  "oferta": "Я соглашаюсь с пользовательским соглашением и политикой конфиденциальности",
+  "oferta": "Ознакомился с условиями публичной оферты и правилами олимпиады.",
   "userProfile": "Профиль пользователя",
   "myPage": "Моя страница",
   "details": "Подробности",
