--- a/src/translations/uz.json
+++ b/src/translations/uz.json
@@ -51,7 +51,7 @@
   "testStart": "Testni boshlash",
   "birthday": "Tug'ilgan sanangiz",
   "chooseTypeOfClass": "Kurs/Sinf/Bitirgan",
-  "oferta": "Shu bilan men foydalanuvchi shartnomasi va maxfiylik siyosatiga rozilik bildiraman",
+  "oferta": "Ommaviy oferta shartlari va olimpiada nizomi bilan tanishdim.",
   "userProfile": "Foydalanuvchi profili",
   "myPage": "Mening sahifam",
   "details": "Tafsilotlar",
