--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -53,6 +53,13 @@
   "address": "Адрес",
   "oferta": "Ознакомился с условиями публичной оферты и правилами олимпиады.",
   "userProfile": "Профиль пользователя",
+  "yourLogin": "Ваш логин",
+  "yourPassword": "Ваш пароль",
+  "copied": "Скопировано!",
+  "copy": "Копирование",
+  "got it": "Понятно",
+  "successRegister": "Вы успешно зарегистрировались.",
+  "userLoginandPassword": "Ваш логин и пароль для входа",
   "myPage": "Моя страница",
   "details": "Подробности",
   "region": "Регион",
@@ -76,9 +83,7 @@
   "aboutOlympics": "Об олимпиаде",
   "faq": "Вопросы и ответы",
   "aboutus": "О нас",
-  "yourLogin": "Ваш логин",
-  "yourPassword": "Ваш пароль",
-  "got it": "Понятно",
+
   "WantchangePassword": "Если вы хотите изменить свой пароль, вы можете сделать это на моей странице.",
   "olympicsTitle": "Олимпиада по математике IQMath-2025",
   "aboutOlympicsTitle": "Условия участия в олимпиаде",
