--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -8,6 +8,7 @@
   "questions": "Вопросы",
   "homePage": "Главная страница",
   "reminder": "Напоминание",
+  "logout": "Выйти",
   "first_reminder": "Олимпиада проводится в два этапа. Первый этап проводится в онлайн-формате. 300 участников, набравших наибольшее количество баллов за правильные ответы на тестовые вопросы, получают право на участие во втором этапе.",
   "second_reminder": "Первый этап: тесты проводятся на сайте 'iqmath.uz' и включают 30 вопросов. Баллы распределяются следующим образом: первые 10 вопросов оцениваются в 2,1 балла за каждый; следующие 10 вопросов — в 3,1 балла за каждый; последние 10 вопросов — в 5,1 балла за каждый.",
   "third_reminder": "Продолжительность олимпиады - 1 час.",
