--- a/src/translations/uz.json
+++ b/src/translations/uz.json
@@ -8,6 +8,7 @@
   "questions": "Savollar",
   "homePage": "Bosh sahifa",
   "reminder": "Eslatma",
+  "logout": "Chiqish",
   "first_reminder": "Olimpiada ikki bosqichda o'tkaziladi. Birinchi bosqich onlayn shaklda topshiriladi.",
   "second_reminder": "Unda test savollariga to'g'ri javob berib eng yuqori ball to'plagan 300 nafar qatnashchilar ikkinchi bosqichga yo'llanmani qo'lga kiritadilar.",
   "third_reminder": "Olimpiada davomiyligi – 1 soat.",
