--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -71,6 +71,9 @@
   "educationalInstitution": "Образовательное учреждение:",
   "yes": "Да",
   "no": "Нет",
+  "wantToChangePassword": "Если предоставленный нами пароль вызывает у вас дискомфорт, вы можете его изменить.",
+  "changePassword": "Изменить пароль",
+  "confidentiality": "Конфиденциальность",
   "aboutusTitle": "Инновационная электронная платформа",
   "aboutusTitle1": "Подробнее о «IQ math».",
   "aboutusTitle2": "Что мы предлагаем?",
@@ -84,7 +87,11 @@
   "aboutOlympics": "Об олимпиаде",
   "faq": "Вопросы и ответы",
   "aboutus": "О нас",
-
+  "alreadyPassedTest": "Вы уже прошли тест!!!",
+  "finishTest": "Завершить тест",
+  "areYouSure": "Вы уверены, что хотите завершить тест? После нажатия кнопки «Да» вы не сможете вернуться к процессу тестирования.",
+  "question": "вопрос",
+  "knowAboutResult": "Узнать результат теста",
   "WantchangePassword": "Если вы хотите изменить свой пароль, вы можете сделать это на моей странице.",
   "olympicsTitle": "Олимпиада по математике IQMath-2025",
   "aboutOlympicsTitle": "Условия участия в олимпиаде",
