--- a/src/translations/uz.json
+++ b/src/translations/uz.json
@@ -60,9 +60,17 @@
   "district": "Tuman/Shahar",
   "settings": "Sozlamalar",
   "exitWeb": "Web sahifadan chiqish",
+  "confidentiality": "Maxfiylik",
   "exitWebDesc": "Haqiqatan ham sahifani tark etmoqchimisiz?",
+  "wantToChangePassword": "Agarda biz taqdim etgan parol sizga noqulaylik tug'dirayotgan bo'lsa, uni o'zgartirishingiz mumkin.",
+  "changePassword": "Parolni o'zgartirish",
   "yes": "Ha",
   "no": "Yo'q",
+  "alreadyPassedTest": "Siz allaqachon test topshirgansiz !!!",
+  "knowAboutResult": "Test natijasini bilish",
+  "finishTest": "Testni yakunlash",
+  "areYouSure": "Testni yakunlashga aminmisiz? 'Ha' tugmasini bosganingizdan so'ng siz test jarayoniga qayta olmaysiz.",
+  "question": "savol",
   "successRegister": "Muvaqqiyatli ro'yhatdan o'tdingiz",
   "userLoginandPassword": "Sizning login parolingiz",
   "copy": "Nusxa olish",
