--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -87,6 +87,10 @@
   "aboutOlympics": "Об олимпиаде",
   "faq": "Вопросы и ответы",
   "aboutus": "О нас",
+  "correctAnswers": "Правильные ответы",
+  "totalScores": "Общий балл",
+  "inCorrectAnswers": "Неправильные ответы",
+  "SumScore": "Собранные баллы",
   "alreadyPassedTest": "Вы уже прошли тест!!!",
   "finishTest": "Завершить тест",
   "areYouSure": "Вы уверены, что хотите завершить тест? После нажатия кнопки «Да» вы не сможете вернуться к процессу тестирования.",
