--- a/src/translations/uz.json
+++ b/src/translations/uz.json
@@ -64,10 +64,14 @@
   "exitWebDesc": "Haqiqatan ham sahifani tark etmoqchimisiz?",
   "wantToChangePassword": "Agarda biz taqdim etgan parol sizga noqulaylik tug'dirayotgan bo'lsa, uni o'zgartirishingiz mumkin.",
   "changePassword": "Parolni o'zgartirish",
+  "SumScore": "To'plangan ball",
   "yes": "Ha",
   "no": "Yo'q",
+  "correctAnswers": "To'g'ri javoblar",
+  "inCorrectAnswers": "Noto'g'ri javoblar",
   "alreadyPassedTest": "Siz allaqachon test topshirgansiz !!!",
   "knowAboutResult": "Test natijasini bilish",
+  "totalScores": "Umumiy ball",
   "finishTest": "Testni yakunlash",
   "areYouSure": "Testni yakunlashga aminmisiz? 'Ha' tugmasini bosganingizdan so'ng siz test jarayoniga qayta olmaysiz.",
   "question": "savol",
