--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -143,5 +143,5 @@
   "LangOfEducation": "Язык обучения",
   "courses": "Курсы",
   "schoolNumber": "Введите номер вашей школы",
-  "litseyName": "Напишите название вашей средней школы."
+  "litseyName": "Выберите академический лицей"
 }
