--- a/src/translations/uz.json
+++ b/src/translations/uz.json
@@ -144,5 +144,5 @@
   "LangOfEducation": "Ta'lim tili",
   "courses": "Kurslar",
   "schoolNumber": "Maktabingiz raqamini kiriting",
-  "litseyName": "Litseyingiz nomini yozing"
+  "litseyName": "Akademik litseyni tanlang"
 }
